Re-added initial cv website files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing ="20">
         <tr>
-            <td><img src="ReeceSquare-modified.png" alt="Man smiling" width="300" height="300"></td>
+            <td><img src="images/ReeceSquare-modified.png" alt="Man smiling" width="300" height="300"></td>
             <td><h1>Reece Holland</h1>
                 <p><em>Founder and CEO of <strong><a href="https://www.instagram.com/rgholls/?hl=en">Himself limited</a></strong></em>
                 </p>
