--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h3>Book reading</h3>
     <ul>
         <li><a href="https://www.goodreads.com/book/show/343.Perfume">Perfume</a></li>
-        <li><a href="https://www.goodreads.com/book/show/28257707-the-subtle-art-of-not-giving-a-f-ck">Subtle art of not giving a F**k!</a></li>
+        <li><a href="https://www.goodreads.com/book/show/28257707-the-subtle-art-of-not-giving-a-f-ck">Subtle art of not giving a F*ck!</a></li>
         <li><a href="https://www.goodreads.com/en/book/show/40191563">The Lion tamer who lost</a></li>
     </ul>
     <hr>
